# xTerm

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-dmg.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-04-19-tauri-updater-implementation.md
docs/superpowers/specs/: 2026-04-19-tauri-updater-design.md
scripts/: bench_startup.sh  test_frontend_regressions.mjs  test_release_workflow.mjs  test_security_regressions.mjs  test_updater_regressions.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  credential_store.rs  host_probe.rs  host_store.rs  lib.rs  main.rs  models.rs  pty.rs  ssh_config.rs  ssh_import.rs  webdav_sync.rs  webdav_url.rs
src/components/dialogs/: HostEditorDialog.tsx  SettingsDialog.tsx  SshConfigImportDialog.tsx  WebdavSyncDialog.tsx
src/components/hosts/: SortableHostRow.tsx
src/components/layout/: HostsSidebar.tsx  MainPane.tsx
src/components/settings/: SettingsPanel.tsx  SettingsWindowApp.tsx
src/components/ui/: ToastViewport.tsx  dialog.tsx
src/debug/: ErrorBoundary.tsx  GlobalErrorOverlay.tsx  errorStore.ts  installGlobalErrorHandlers.ts
src/hooks/: useAppController.ts  useHostInsights.ts  useHostsManager.ts  useTerminalSessions.ts  useUpdaterController.ts  useWebdavSync.ts
src/hooks/terminal/: actions.ts  ptyEvents.ts  runtime.ts  sessionBuffer.ts  types.ts
src/lib/: metricsDock.ts  perfMetrics.ts  settingsEvents.ts  terminalOptions.ts  terminalTheme.ts  theme.ts  toast.ts  webdav.ts
src/types/: models.ts  settings.ts
