[[bin]]
name = "xtermius"
path = "src/main.rs"

[package]
name = "xtermius"
version = "0.3.1"
description = "A terminal emulator with SSH support"
authors = ["you"]
edition = "2021"

[lib]
name = "xtermius_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
tauri-plugin-dialog = "2.6.0"
portable-pty = "0.9.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }
window-vibrancy = "0.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
